# MultiAgentDecentralizedCNRL

./: .gitignore  CMakeLists.txt  README.md  agent.py  baseline.py  collision_test.py  core.py  ddpg.py  ddpg_tf2.py  ddpg_train_eval.py  env_test.py  fetchreach.py  lua_publisher  main.cpp  main.py  package.xml  plot_file.py  plotter.py  single_ur.py
DDPG/: agent.py  main.py  single_ur.py
TD3/: DQN.py  DQNSingleAgent.py  main.py
TD3/models/: TD3_UrBinPickingPlace-v0_1234_actor  TD3_UrBinPickingPlace-v0_1234_actor_optimizer  TD3_UrBinPickingPlace-v0_1234_critic  TD3_UrBinPickingPlace-v0_1234_critic_optimizer
TD3/results/: TD3_UrBinPickingPlace-v0_1234_test.npy  TD3_UrBinPickingPlace-v0_1234_train.npy  (+2 more)
WorkCell/: Scene.wc.xml
cadDrawings/: HAND_E_FINGER_STD_20181026.STEP  Master-workspace.ipt  Master-workspace.stl  Master-workspace.stp  Robotiq_Finger_mm.stl  Robotiq_Gripper_Meter.stl  Robotiq_Gripper_mm.stl  Table_Holed.ipt  Table_Holed.rar
envs/: lab_env.xml  robot.xml  shared.xml  single_robot.xml  two_robots.xml
gym-mergablerobots/: setup.py
include/: TTTRL.h  URControl.h  URVrep.h  URVrepSim.h  URrobot.h
models/: TD3_UrBinPicking-v0_lift_1234_actor  TD3_UrBinPicking-v0_lift_1234_actor_optimizer  TD3_UrBinPicking-v0_lift_1234_critic  TD3_UrBinPicking-v0_lift_1234_critic_optimizer  TD3_UrBinPickingLift-v0_1234_actor  TD3_UrBinPickingLift-v0_1234_actor_optimizer  TD3_UrBinPickingLift-v0_1234_critic  TD3_UrBinPickingLift-v0_1234_critic_optimizer  TD3_UrBinPickingLift-v0_2345_actor  TD3_UrBinPickingLift-v0_2345_actor_optimizer  TD3_UrBinPickingLift-v0_2345_critic  TD3_UrBinPickingLift-v0_2345_critic_optimizer  TD3_UrBinPickingOrient-v0_1234_actor  TD3_UrBinPickingOrient-v0_1234_actor_optimizer  TD3_UrBinPickingOrient-v0_1234_critic  TD3_UrBinPickingOrient-v0_1234_critic_optimizer  TD3_UrBinPickingPlace-v0_1234_actor  TD3_UrBinPickingPlace-v0_1234_actor_optimizer  TD3_UrBinPickingPlace-v0_1234_critic  TD3_UrBinPickingPlace-v0_1234_critic_optimizer  TD3_UrBinPickingPlace-v0_2345_actor  TD3_UrBinPickingPlace-v0_2345_actor_optimizer  TD3_UrBinPickingPlace-v0_2345_critic  TD3_UrBinPickingPlace-v0_2345_critic_optimizer  TD3_UrBinPickingReach-v0_1234_actor  TD3_UrBinPickingReach-v0_1234_actor_optimizer  TD3_UrBinPickingReach-v0_1234_critic  TD3_UrBinPickingReach-v0_1234_critic_optimizer  TD3_UrBinPickingReach-v0_2345_actor  TD3_UrBinPickingReach-v0_2345_actor_optimizer  TD3_UrBinPickingReach-v0_2345_critic  TD3_UrBinPickingReach-v0_2345_critic_optimizer
plot_data/: plot_data_DDPG  plot_data_DDPG-HER
results/: TD3_UrBinPicking-v0_lift_1234_test.npy  TD3_UrBinPicking-v0_lift_1234_train.npy  TD3_UrBinPickingLift-v0_1234_test.npy  TD3_UrBinPickingLift-v0_2345_test.npy  TD3_UrBinPickingLift-v0_2345_train.npy  TD3_UrBinPickingOrient-v0_1234_test.npy  TD3_UrBinPickingOrient-v0_1234_train.npy  TD3_UrBinPickingPlace-v0_1234_test.npy  TD3_UrBinPickingPlace-v0_1234_train.npy  TD3_UrBinPickingPlace-v0_2345_test.npy  TD3_UrBinPickingPlace-v0_2345_train.npy  TD3_UrBinPickingReach-v0_1234_test.npy  TD3_UrBinPickingReach-v0_1234_train.npy  TD3_UrBinPickingReach-v0_2345_test.npy  TD3_UrBinPickingReach-v0_2345_train.npy
robotiq_control_python/: test_robotiq.py
scenes/: robotic_hand_e.ttt  ur_5_dual_setup.ttt  ur_5_dual_setup_hand_e.ttt  ur_5_dual_setup_no_suction.ttt  ur_5_dual_setup_w_table.ttt  ur_5_service.ttt  ur_5_subscriber.ttt  ur_5_test.ttt
scripts/: catkin_build.sh
src/: CoppeliaSim.py  RobotControl.py  TTTRL.cpp  URControl.cpp  URRobot.cpp  URVrep.cpp  URVrepSim.cpp  URrobot.cpp  firstVREPSuh.lua  main.cpp  main.py
srv/: moveRobot.srv
videos/: place.webm  reach.webm
(+545 files in other folders)
