<?xml version="1.0"?>
<package>
    <name>mergable_industrial_robots</name>
    <version>1.0.0</version>
    <description>MergableIndustrialRobots</description>
    <maintainer email="kagro15@student.sdu.dk">kasper</maintainer>
    <license>Beerware</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>sensor_msg</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>sensor_msg</run_depend>
    <run_depend>message_runtime</run_depend>
</package>

